# LightMem-Ego

./: .gitattributes  .gitignore  README.md  gradle.properties  settings.gradle.kts
src/backend/: .env.example  .gitignore  CHANGELOG_FOR_SERVER.md  DEPLOYMENT.md  README.md  api_server.py  build_episodic_from_mst.py  build_mcur_from_stream.py  build_mst_from_stream.py  download_whisperx_modelscope.sh  incremental_append_memory.py  inspect_mcur.py  inspect_memory_versions.py  inspect_mst_refine_status.py  memory_worker_subprocess.py  monitor_online_pipeline.py  online_em2mem_memory_adapter.py  online_evidence_builder.py  online_evidence_worker.py  online_live_ingest_worker.py  online_memory_worker.py  online_mst_consolidation_worker.py  online_mst_refine_worker.py  online_mst_to_em2mem.py  online_mst_to_worldmm.py  online_processor.py  online_qa_history.py  online_query_runtime.py  online_query_session.py  online_query_worker.py  online_qwen3_embedding_server.py  online_retrieval_scheme.py  online_rokid_day_merge_worker.py  online_stream_worker.py  online_text_embedding_runtime.py  online_visual_embedding_builder.py  online_visual_worker.py  online_vlm2vec_embedding_server.py  online_worker.py  online_worldmm_memory_adapter.py  (+7 more)
src/backend/demo/: README.md  __init__.py  api.py  frontend_demo_test_contract.md  start_demo_api.sh
src/backend/docs/: ask_streaming_frontend_contract.md  frontend_demo_mode_start_api_update.md  frontend_multi_session_rokid_update.md  multi_session_rokid_api_contract.md  online_stream_api_contract.md  stage11W_live_media_ingest_plan.md  stage_rokid_backend_adapter_plan.md
src/backend/eval/: __init__.py  query_rag.py
src/backend/online_current/: __init__.py  mcur_query.py  mcur_selector.py  mcur_store.py  mcur_updater.py  schemas.py
src/backend/online_memory/: __init__.py  build_em2mem_memory.py  build_worldmm_memory.py  em2mem_layout.py  evidence_to_em2mem.py  evidence_to_worldmm.py  memory_registry.py  query_session.py  worldmm_layout.py
src/backend/online_memory_incremental/: __init__.py  append_log.py  component_versions.py  dirty_windows.py  graph_delta.py  hipporag_cache.py  incremental_store.py  semantic_delta.py  snapshot_manager.py  visual_task_writer.py
src/backend/online_pipeline/: __init__.py  active_session.py  audio_stream.py  backpressure.py  file_lock.py  frame_stream.py  live_ingest.py  live_rtmp.py  realtime_ingest.py  rokid_day.py  (+5 more)
(+273 files in other folders)
