[build-system]
requires = ["setuptools==81.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "em2mem-online-server"
version = "0.1.0"
description = "Online long-video and realtime multimodal memory QA server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi==0.136.3",
  "uvicorn[standard]==0.49.0",
  "python-multipart==0.0.32",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "numpy==2.0.2",
  "opencv-python==4.13.0.92",
  "Pillow==12.2.0",
  "tqdm==4.68.2",
  "openai==2.41.0",
  "tenacity==9.1.4",
  "requests==2.34.2",
  "httpx==0.28.1",
  "filelock==3.29.1",
  "packaging==26.2",
  "networkx==3.4.2",
  "python-igraph==1.0.0",
  "faiss-cpu==1.14.2",
  "transformers==5.10.2",
  "sentence-transformers==5.5.1",
  "accelerate==1.13.0",
  "peft==0.19.1",
  "qwen-vl-utils==0.0.14",
  "decord==0.6.0",
  "pysrt==1.1.2",
  "scikit-image==0.25.2",
  "litellm==1.88.1",
  "tiktoken==0.13.0",
  "boto3==1.43.26",
  "einops==0.8.2",
  "opencc-python-reimplemented==0.1.7"
]

[project.optional-dependencies]
asr = ["whisperx==3.8.6"]
gpu = ["torch==2.12.0", "torchvision==0.27.0"]
dev = ["pytest==9.1.1", "ruff==0.15.21", "mypy==2.2.0"]

[tool.setuptools]
packages = []
py-modules = []
